<resources>
    <string name="facebook_app_id">1879342772122734</string>
    <string name="fb_login_protocol_scheme">fb1879342772122734</string>
    <string name="login">LOGIN</string>
    <string name="signin">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="app_Name">Dovies Fitness</string>
    <string name="create_your_doviesfitness_account">CREATE YOUR DOVIESFITNESS ACCOUNT</string>
    <string name="sign_up_with_facebook">Sign up with Facebook</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="or">Or</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="country">Country (Optional)</string>
    <string name="mm_dd_yyyy">Date of birth (Optional)</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up_for_emails_to_hear_from_all_latest_from_doviesfitness">Sign up for emails to hear from all
        latest from Doviesfitness
    </string>
    <string name="create_account">create account</string>
    <string name="login_txt">Sign In with Username Or Email</string>
    <string name="please_enter_your_full_name">Please enter your full name.</string>
    <string name="please_enter_your_user_name">Please enter your username.</string>
    <string name="please_enter_email_address">Please enter your email address.</string>
    <string name="please_enter_valid_email_address">Please enter a valid email address.</string>
    <string name="please_enter_a_password">Please enter a password.</string>
    <string name="something_wrong">Something went wrong please try again later</string>
    <string name="no_internate">No internate connection</string>
    <string name="re_enter_password">Re-enter password.</string>
    <string name="pass_does_not_match_the_confirm_pass">Password does not match the confirm password.</string>
    <string name="please_select_your_country">Please select your country.</string>
    <string name="search_country">Search Country</string>
    <string name="countries">Countries</string>
    <string name="cancel">Cancel</string>
    <string name="what_s_your_gender">WHAT\'S YOUR GENDER?</string>
    <string name="female">FEMALE</string>
    <string name="male">MALE</string>
    <string name="done">Done</string>
    <string name="skip">skip</string>
    <string name="how_tall_are_you">HOW TALL ARE YOU?</string>
    <string name="ft">FT</string>
    <string name="todo">TODO</string>
    <string name="_0">0</string>
    <string name="in">IN</string>
    <string name="cm">CM</string>
    <string name="kg">KG</string>
    <string name="lbs">LBS</string>
    <string name="what_s_your_weight">WHAT\'S YOUR WEIGHT</string>
    <string name="create_username">CREATE USERNAME</string>
    <string name="pick_a_username_for_your_account_you_can_always_change_it_later">Pick a username for your account, You
        can always change it later.
    </string>
    <string name="username">Username</string>
    <string name="add_profile_photo">ADD PROFILE PHOTO</string>
    <string name="add_a_profile_photo_so_that_your_friend_know_it_s_your">Add a profile photo so that your friend know
        it\'s you.
    </string>
    <string name="welcome_to_doviesfitness">WELCOME TO DOVIESFITNESS,</string>
    <string name="yasha">YASHA</string>
    <string name="time_to_create_and_share_your">Time to create and share your</string>
    <string name="help_and_motivate_you">HELP AND MOTIVATE YOU.</string>
    <string name="are_here_to_inspire">ARE HERE TO INSPIRE,</string>
    <string name="always_remenber_we">ALWAYS REMENBER WE</string>
    <string name="workout_with_friends_and_family">workout with friends and family.</string>
    <string name="under_devlopment_mode">Under Devlopment mode</string>
    <string name="sign_in">Sign in</string>
    <string name="or_sign_in_with">or sign in with:</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="not_member">Not a member?</string>
    <string name="join_us">Join Us</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="firstNameLengthError">first name is too short (minimum 3 characters)</string>
    <string name="passEmptyError">Please enter password</string>
    <string name="firstNameEmptyError">Please enter User name</string>
    <string name="reset">reset</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="enter_your_email_to_receive_instuctions_on_how_to_reset_your_password">Enter your email to receive
        instuctions on how to reset your password.
    </string>
    <string name="password_reset">PASSWORD RESET</string>
    <string name="you_should_receive_a_link_few_moments_please_open_that_link_to_reset_your_password">You should receive
        a link few moments. Please open that link to reset your password.
    </string>
    <string name="back_to_login">back to login</string>
    <string name="home">Home</string>
    <string name="diet_plan">Diet Plan</string>
    <string name="workout">Workout</string>
    <string name="workout_plan">Workout Plan</string>
    <string name="my_profile">My Profile</string>
    <string name="feed">FEED</string>
    <string name="by_creating_an_account_you_agree_to_doviesfitness">By creating an account, you agree to
        Doviesfitness
    </string>
    <string name="by_login_an_account_you_agree_to_doviesfitness">By logging in, you agree to
        Doviesfitness\'s
    </string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="and">and</string>
    <string name="terms_of_use">Terms Of Use.</string>
    <string name="or_return_to">Or return to</string>
    <string name="log_in_">Log In.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="update_to_premium">UPDATE TO PREMIUM</string>
    <string name="upgrade_to_play">UPGRADE TO PLAY</string>
    <string name="rate_us">Rate Us</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="contact_us">Contact Us</string>
    <string name="app_faq">App FAQ</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="comments">COMMENTS</string>
    <string name="write_a_comment">Write a comment…</string>
    <string name="likes">likes</string>
    <string name="like">like</string>
    <string name="delete">Delete</string>
    <string name="report_comment">Report Comment</string>
    <string name="photo">PHOTO</string>
    <string name="userlistworkoutplan">UserListWorkoutPlan</string>
    <string name="good_for">GOOD FOR</string>
    <string name="equipments">EQUIPMENTS</string>
    <string name="overview">OVERVIEW</string>
    <string name="add_to_my_plan">Add to my plan</string>
    <string name="video">Video</string>
    <string name="video_loading">Video Loading</string>
    <string name="choose_image">Choose Image</string>
    <string name="use_camera">Use Camera</string>
    <string name="choose_existing">Choose existing</string>
    <string name="clear_filter">Clear Filter</string>
    <string name="clear_date_filter">CLEAR DATE FILTER</string>
    <string name="edit_workout">Edit workout</string>
    <string name="save_to_my_workout">Save to my workout</string>
    <string name="reps">Reps</string>
    <string name="equipment">Equipment</string>
    <string name="workout_created_by">Workout Created by</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout?</string>
    <string name="add_to_my_diet_plan">Add to my diet plan</string>
    <string name="minutes">Minutes</string>
    <string name="exercises">Exercises</string>
    <string name="secs">secs</string>
    <string name="level">Level</string>
    <string name="all_workout_collection">All Workout Collections</string>
    <string name="trainer_choice">Trainers choice</string>
    <string name="exercises_library">Exercise Library</string>
    <string name="workout_collection">Workout Collections</string>
    <string name="create_workout">Create Workout</string>
    <string name="create_workout_log">Create workout log</string>
    <string name="no_record_found">No record found</string>
    <string name="no_exercise_found">No Exercise found. Coming Soon</string>
    <string name="no_fav_exercise_found">No Favorite Exercise</string>
    <string name="filter">Filter</string>
    <string name="apply">APPLY</string>
    <string name="view_all">View All</string>
    <string name="rest_time">Rest Time</string>
    <string name="music">MUSIC</string>
    <string name="share">SHARE</string>
    <string name="search">Search</string>
    <string name="downloading">Downloading..</string>
    <string name="end_workout">End Workout</string>
    <string name="workout_complete">WORKOUT COMPLETE</string>
    <string name="workout_complete_small">Workout Complete</string>
    <string name="log_workout">Do you want to log your workout so you can track your progress?</string>
    <string name="stream_log_workout">You can log your workout and track your daily progress by taking a picture or upload one from your gallary,
    you can add your current weight, calories burn during this workout, and you can add personal note as well.</string>
    <string name="no">NO</string>
    <string name="No">No</string>
    <string name="yes">YES</string>
    <string name="rest">REST</string>
    <string name="no_workout_found">Create your own workout here for easy access. You can select the level of the
        workout. You can write what the workout is good for and also add additional information in the overview section
        if you choose to share the workout with friends and family or clients.
    </string>
    <string name="no_workout_log">No workout log found. You must complete a workout and log it first to see your workout log history.
</string>
    <string name="are_you_sure_you_want_to_delete_this_workout_log">Are you sure you want to delete this Workout Log?</string>
    <string name="are_you_sure_you_want_to_delete_this_workout_history">Are you sure you want to delete this Workout History?</string>
    <string name="workout_log">Workout Log</string>
    <string name="how_do_you_like">How do you like the workout?</string>
    <string name="add_progress_picture">Add Progress Picture (you can take up to 4 pictures)</string>
    <string name="submit">Submit</string>
    <string name="save_log">SAVE LOG</string>
    <string name="my_plan">You can create your plan by selecting (create a plan), or you can choose from our workout
        plan menu. Creating your plan allows you to choose your workouts you have created or select a workout from our
        workout collection list. And, you get to choose the days of the week you want to workout and also select the day
        you want to rest. You have full access to everything. All you have to do is click on the days you want to do
        specific workout and select the workout and click add. After that, you can add all additional information like
        equipment, diet plan, and notes or other information in case you want to share your plan with your friends,
        family or clients. Creating a plan takes a few minutes, and it is effortless to do as well. You can also choose
        a plan from our workout plan menu and edit them according to your needs. Always remember, you can modify any
        workout plan on this app and even any workout from our workout collections. You have the freedom to customise a
        workout or a full workout plan according to your level. If you have any question or concern contact us right
        away. We are here to inspire and motivate you.
    </string>
    <string name="overview_str">Overview</string>
    <string name="good_for_str">
        <![CDATA[<font color=\'#C7C7C7\'>Good For </font>]]></string>
</resources>