<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.authentication.login.LoginActivity"
    android:background="@color/colorBlack"
    android:id="@+id/sv_main"
    android:gravity="center">

<!--        <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--            xmlns:tools="http://schemas.android.com/tools"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--           >-->
    <LinearLayout
        android:id="@+id/sub_main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:padding="@dimen/_5sdp"
            android:tint="@color/colorWhite"
            app:srcCompat="@drawable/ic_ico_back_login" />


        <ImageView
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/logo_splash" />

        <LinearLayout
            android:id="@+id/fb_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="10dp"
            android:layout_marginTop="@dimen/_50sdp"
            android:background="@drawable/fb_btn_bg"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/_22sdp"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/ic_fb_icon" />

            <TextView
                style="@style/ExtraProductRegularStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:fontFamily="@font/product_sans_regular"
                android:textAllCaps="false"
                android:text="@string/sign_in_with_facebook"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_12sdp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="20dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <View
                android:layout_width="20dp"
                android:layout_height="0.7dp"
                android:layout_gravity="center"
                android:background="@color/colorGray1" />

            <TextView
                style="@style/SmallTamilSangamStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_marginRight="@dimen/_5sdp"
                android:text="@string/or"
                android:textColor="@color/colorWhite" />

            <View
                android:layout_width="20dp"
                android:layout_height="0.7dp"
                android:layout_gravity="center"

                android:background="@color/colorGray1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_18sdp"
            android:layout_marginEnd="@dimen/_18sdp"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/product_sans_bold"
                android:text="@string/login_txt"
                android:textColor="@color/colorWhite"
                android:layout_gravity="center"
                android:textAllCaps="true"
                android:letterSpacing="0.1"
                android:textSize="@dimen/_10sdp" />


            <EditText
                android:id="@+id/et_username"
                style="@style/mediumProductRegularStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_18sdp"
                android:background="@drawable/edit_text_bg_gray"
                android:fontFamily="@font/product_sans_regular"
                android:hint="@string/username"
                android:inputType="textEmailAddress"
                android:padding="@dimen/_10sdp"
                android:singleLine="true"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/col_hint"
                android:textCursorDrawable="@drawable/blue_cursor"
                android:textSize="@dimen/_12sdp" />


            <View
                android:layout_width="match_parent"
                android:layout_height="0.2dp"
                android:layout_marginTop="@dimen/_7sdp"
                android:background="@color/colorWhite"
                android:visibility="gone" />

            <TextView
                android:id="@+id/error_username"
                style="@style/ExtraProductRegularStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_2sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:text="@string/please_enter_your_user_name"
                android:textColor="@color/colorRed"
                android:textSize="@dimen/_8sdp"
                android:visibility="gone" />


            <EditText
                android:id="@+id/et_pass"
                style="@style/mediumProductRegularStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_22sdp"
                android:background="@drawable/edit_text_bg_gray"
                android:fontFamily="@font/product_sans_regular"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/col_hint"
                android:textCursorDrawable="@drawable/blue_cursor"
                android:textSize="@dimen/_12sdp"
                tools:ignore="UnusedAttribute" />
            <TextView
                android:id="@+id/error_pass"
                style="@style/ExtraProductRegularStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_2sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:text="@string/please_enter_a_password"
                android:textColor="@color/colorRed"
                android:textSize="@dimen/_8sdp"
                android:visibility="gone" />
            <TextView
                android:id="@+id/tv_terms_and_privacy"
                style="@style/ExtraProductRegularStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_25sdp"
                android:layout_marginTop="@dimen/_25sdp"
                android:clickable="true"
                android:lineSpacingExtra="@dimen/_3sdp"
                android:textColor="@color/colorWhite3"
                android:textSize="@dimen/_8sdp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.2dp"
                android:layout_marginTop="@dimen/_7sdp"
                android:background="@color/colorGray1"
                android:visibility="gone" />

            <Button
                android:id="@+id/btn_login"

                android:layout_width="match_parent"
                android:layout_height="@dimen/_38sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"

                android:background="@drawable/create_account_btn_bg_grey"

                android:fontFamily="@font/product_sans_bold"
                android:letterSpacing="0.04"
                android:text="@string/signin"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_5sdp"
                android:fontFamily="@font/product_sans_regular"
                android:text="@string/or_sign_in_with"
                android:textColor="@color/colorWhite"
                android:visibility="gone"
                android:textSize="@dimen/_10sdp" />


            <ImageView
                android:id="@+id/iv_fb"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:visibility="gone"
                android:padding="@dimen/_1sdp"
                app:srcCompat="@drawable/ic_fb_login" />

            <com.facebook.login.widget.LoginButton
                android:id="@+id/login_button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:visibility="gone" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_25sdp"
                android:layout_marginBottom="@dimen/_180sdp">

                <TextView
                    android:id="@+id/tv_new_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/product_sans_regular"
                    android:text="@string/don_t_have_an_account"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/_10sdp" />

                <TextView
                    android:id="@+id/tv_forgotpass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:fontFamily="@font/product_sans_regular"
                    android:text="@string/forgot_password"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/_10sdp" />


            </RelativeLayout>

        </LinearLayout>


    </LinearLayout>




<!--</ScrollView>/-->
</ScrollView>